# CUDA-Matrix-Multiplication

./: README.md
task1/: CMakeLists.txt  README.md  main_optimized.cu  main_original.cu
task2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  MatrixMulCuda.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cu  matrix_mul_block.vcxproj  matrix_mul_block.vcxproj.filters
task2/Debug/: matrix_mul_block.exp  matrix_mul_block.lib
task2/matrix_mul_block.dir/Debug/: main.cu.cache  matrix_mul_block.exe.recipe  matrix_mul_block.ilk
task2/matrix_mul_block.dir/Debug/matrix_mul_block.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
task2/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
task2/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
task2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
task2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
